# App/2.Application/Server/Api/Content/IContentController.ts
@@ -1,6 +1,3 @@
-import { IArticle } from "2.Application/Common/Domain/IArticle";
-import { IArticleTree } from "2.Application/Common/Services/ArticleTree/IArticleTreeService";
-
 export const IContentControllerKey = "IContentControllerKey";
 
 export interface IContentController {
